# K5_Tools

./: LICENSE  README.md  const_vars.py  functions.py  logger.py  main.py  nuitka_build.bat  nuitka_build_onefile.bat  pyproject.toml  requirements.txt  serial_utils.py  translations.py
.github/workflows/: nuitka-build-x64.yml  nuitka-build-x86.yml
resources/: font.py  tone.py
