[tool.poetry]
name = "k5-tools"
version = "0.4"
description = ""
authors = ["hank9999 <hank9999@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.5"
importlib-resources = "^6.1.1"
nuitka = "^1.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
